# EgoRA

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-ACADEMIC  NOTICE  README.md  pyproject.toml
examples/: diagnostics_only.py  peft_compat_example.py  quickstart_training.py
notebooks/: quickstart_colab.ipynb
src/egora/: __init__.py  adapters.py  cli.py  geometry.py  governor.py  peft_compat.py  plotting.py  trainer.py
tests/: test_adapters.py  test_cli.py  test_geometry.py  test_governor.py  test_peft_compat.py  test_plotting.py
