[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egora"
dynamic = ["version"]
description = "EgoRA — Entropy-Governed Orthogonality Regularization for Adaptation. Dynamic information-theoretic regularization for fine-tuning neural networks."
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Mark Dillerop", email = "mark@dillerop.com"},
]
keywords = [
    "deep-learning",
    "lora",
    "fine-tuning",
    "regularization",
    "entropy",
    "orthogonality",
    "knowledge-preservation",
    "transformer",
    "pytorch",
    "egora",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.21",
]

[project.scripts]
egora = "egora.cli:main"

[project.optional-dependencies]
diagnostics = [
    "matplotlib>=3.5",
    "scipy>=1.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/ArsSocratica/EgoRA"
Documentation = "https://github.com/ArsSocratica/EgoRA#readme"
Repository = "https://github.com/ArsSocratica/EgoRA"
Issues = "https://github.com/ArsSocratica/EgoRA/issues"

[tool.hatch.version]
path = "src/egora/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/egora"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
